# mp_simplehttp

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
server/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  error_handler.cpp  error_handler.h  http_error.cpp  http_error.h  main.cpp  server  server.cpp  server.h
server/mp_management/: fd_pass.cpp  fd_pass.h  fileutils.cpp  fileutils.h  manager.cpp  manager.h  worker.cpp  worker.h
tests/www-root/: 404.html  test.html
